tests/bad/include_ints/bool.stderr
error[E0308]: mismatched types
 --> tests/bad/include_ints/bool.rs:6:33
  |
6 | static BYTES_32_bool: &[bool] = include_ints!(bool, "../../test_data/binary_32");
  |                                 ^^^^^^^^^^^^^^----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                                 |             |
  |                                 |             expected due to this
  |                                 expected `bool`, found integer
  |
  = note: this error originates in the macro `include_ints` (in Nightly builds, run with -Z macro-backtrace for more info)
